# Demo

thriftAsyncDemo/: aggr.thrift
thriftAsyncDemo/client/: CMakeLists.txt  CardQueryClient.cpp
thriftAsyncDemo/gen-cpp/: CMakeLists.txt
thriftAsyncDemo/server/: CMakeLists.txt  test-server.cpp
thriftCardQueryTest/: CMakeLists.txt  UvcDccServices.thrift
thriftCardQueryTest/client/: CMakeLists.txt  CardQueryClient.cpp  CardQueryRequestClient.cpp
thriftCardQueryTest/server/: CMakeLists.txt  CardQueryRequestServer.cpp  CardQueryResponseServer.cpp  CardQueryServer.cpp
thriftDemo/: .cproject  .project  CMakeLists.txt
thriftDemo/client/: Client
thriftDemo/gen-cpp/: CMakeLists.txt
thriftDemo/server/: Server
thriftNonblockingDemo/: CMakeLists.txt
thriftNonblockingDemo/client/: CardQueryClient.cpp
thriftNonblockingDemo/gen-cpp/: CMakeLists.txt
thriftNonblockingDemo/server/: CMakeLists.txt  CardQueryServer.cpp
